--- a/src/styles/mapStyle.less
+++ b/src/styles/mapStyle.less
@@ -72,8 +72,58 @@ body,
     }
   }
   .car-move-control{
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: 0.25rem;
+    width: 22rem;
+    border-width: 0;
+    border-radius: 0.4rem;
+    box-shadow: 0 2px 6px 0 rgba(114, 124, 245, .5);
     position: fixed;
-    bottom: 100px;
-    left: 50px;
+    bottom: 1rem;
+    right: 1rem;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 0.75rem 1.25rem;
+    .input-item{
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      -ms-flex-align: center;
+      align-items: center;
+      width: 100%;
+      height: 3rem;
+      .btn{
+        width: 9rem;
+        margin-right: 10px;
+        
+        display: inline-block;
+        font-weight: 400;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        border: 1px solid transparent;
+        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        background-color: transparent;
+        background-image: none;
+        color: #25A5F7;
+        border-color: #25A5F7;
+        padding: 0.25rem 0.5rem;
+        line-height: 1.5;
+        border-radius: 1rem;
+        -webkit-appearance: button;
+        cursor: pointer;  
+      }
+    }
+    
   }
+  
 }
