--- a/src/app.less
+++ b/src/app.less
@@ -22,6 +22,11 @@ code {
   width: 1920px;
 }
 
+/* 滚动条背景色 */
+::-webkit-scrollbar-track{
+  background-color: #132955 !important; 
+}
+
 @font-face {
   font-family: DS-DIGIB;
   src: url('./assets/DS-DIGIB.TTF');
